# TIC-2025

./: .gitignore  README.md
2_benchmarks/dcdepth/: DCDepth_Benchmark_Document.markdown
2_benchmarks/dcdepth/benchmark/: benchmark_dcdepth.sh
2_benchmarks/dcdepth/benchmark/data/: all_sequences_bw
2_benchmarks/dcdepth/implementation/: DCDepth  test.py  update_nyu_list.py
2_benchmarks/dcdepth/implementation/checkpoints/: dcdepth_eigen.pth
2_benchmarks/dcdepth/implementation/checkpoints/dct_nyu_pff/: result.csv  result_avg.csv
2_benchmarks/dcdepth/implementation/configs/: dct_eigen_pff.yaml  dct_nyu_pff.yaml  nyu_base.yaml  tofdc_base.yaml
2_benchmarks/dcdepth/implementation/data_splits/: nyudepthv2_test_files_with_gt_updated.txt
2_benchmarks/dcdepth/implementation/pretrained/: swin_large_patch4_window12_384_22k.pth
2_benchmarks/pixelformer/: PixelFormer_Technical_Document.markdown  implementation  requirements.txt
2_benchmarks/pixelformer/benchmark/: benchmark_pixelformer.sh
2_benchmarks/pixelformer/benchmark/data/: all_sequences
2_benchmarks/pixelformer/implementation/: benchmark_pixel.py  infer_flask_pixelformer.py
3_deepdso_slam/DeepDSO/cmake/: FindWebsockets.cmake
3_deepdso_slam/DeepDSO/newcrfs/: benchmark_baseline.py  infer.py
3_deepdso_slam/DeepDSO/src/: side.py
3_deepdso_slam/DeepDSO/src/FullSystem/: FullSystem.cpp  FullSystem.h
3_deepdso_slam/DeepDSO/src/IOWrapper/: WebSocketOutput.h
3_deepdso_slam/DeepDSO/src/IOWrapper/Pangolin/: PangolinDSOViewer.cpp
3_deepdso_slam/client_cpp/: CMakeLists.txt
3_deepdso_slam/client_cpp/src/: main_dso_pangolin.cpp
3_deepdso_slam/client_cpp/src/FullSystem/: CoarseInitializer.h  FullSystem.cpp  FullSystem.h  ImmaturePoint.cpp
3_deepdso_slam/client_cpp/src/OptimizationBackend/: EnergyFunctional.cpp  MatrixAccumulators.h
3_deepdso_slam/client_cpp/src/util/: DatasetReader.h  dirent.cpp  dirent.h
3_deepdso_slam/client_cpp_mateo/: .gitignore  CMakeLists.txt
3_deepdso_slam/client_cpp_mateo/newcrfs/: infer_flask.py
3_deepdso_slam/client_cpp_mateo/src/: main_dso_pangolin.cpp
3_deepdso_slam/client_cpp_mateo/src/FullSystem/: ImmaturePoint.cpp
3_deepdso_slam/client_cpp_mateo/src/IOWrapper/: WebSocketOutput.cpp
3_deepdso_slam/client_cpp_mateo/src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
3_deepdso_slam/client_cpp_mateo/src/util/: IndexThreadReduce.h
3_deepdso_slam/server_python/: infer_flask.py  requirements.txt
